# LD58

./: .gitignore  Cargo.toml  LD58.md
.cargo/: config.toml
assets/config/: contracts.ron  faction_datasets.ron
assets/shaders/: grid_shader.wgsl
assets/text/: contracts.ron  interactive_events (1).ron  interactive_events.ron  news.ron
src/: assets.rs  camera.rs  contracts.rs  grid.rs  main.rs  pause.rs  player.rs  test.rs  ui.rs  world_gen.rs
src/events/: event_data.rs  event_triggers.rs  interactive_events.rs  mod.rs  newsfeed_events.rs
src/factions/: mod.rs
src/factory/: logical.rs  mod.rs  physical.rs  source_visuals.rs
src/factory/buildings/: aggregator.rs  buildings.rs  combiner.rs  delinker.rs  mod.rs  sink.rs  source.rs  splitter.rs  trunker.rs
src/things/: buildings.rs
src/ui/: buildings.rs  contracts.rs  interaction.rs  interactive_event.rs  mod.rs  money.rs  newsfeed.rs  shop.rs  tooltip.rs
