[package]
name = "LD58"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_dylib = "0.17.1"
bevy = { version = "0.17.1" }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.11.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
